// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BusyButton renders a primary outlined buton 1`] = `
<WithStyles(Button)
  className="root"
  color="primary"
>
  <span>
    test busy button
  </span>
</WithStyles(Button)>
`;

exports[`BusyButton renders disabled 1`] = `
<WithStyles(Button)
  className="root"
  color="secondary"
  disabled={true}
>
  <pure(HelpIcon)
    className="icon"
  />
  <span>
    test busy button
  </span>
</WithStyles(Button)>
`;

exports[`BusyButton renders with a title and icon 1`] = `
<WithStyles(Button)
  className="root"
  color="secondary"
>
  <pure(HelpIcon)
    className="icon"
  />
  <span>
    test busy button
  </span>
</WithStyles(Button)>
`;

exports[`BusyButton renders with a title and icon, and busy 1`] = `
<WithStyles(Button)
  className="root rootBusy"
  color="secondary"
  disabled={true}
>
  <pure(HelpIcon)
    className="icon"
  />
  <span>
    test busy button
  </span>
  <WithStyles(CircularProgress)
    className="spinner spinnerBusy"
    size={15}
  />
</WithStyles(Button)>
`;

exports[`BusyButton renders with just a title 1`] = `
<WithStyles(Button)
  className="root"
  color="secondary"
>
  <span>
    test busy button
  </span>
</WithStyles(Button)>
`;
